--- a/src/less/mixins/grid.less
+++ b/src/less/mixins/grid.less
@@ -24,7 +24,7 @@
     min-height: 1px;
     margin-left: -@columns-padding;
     margin-right: -@columns-padding;
-    .clearfix()
+    .clearfix();
 }
 
 [class*="@{prefix}-@{columns-name}"] {
