--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,11 +1,20 @@
+@font-face {
+    font-family: 'Impact';
+    src: url('../fonts/impactmtstd-webfont.woff');
+    font-weight: normal;
+    font-style: normal;
+}
 @import "mixins/variable.less";
 @import "mixins/reset.less";
 @import "mixins/base.less";
+@import "mixins/animate.less";
 @import "mixins/layout.less";
 @import "mixins/grid.less";
 @import "mixins/responsie-utillities.less";
 @import "mixins/btn.less";
 @import "mixins/clearfix.less";
 @import "mixins/main.less";
+@import "sprite.less";
+
 
 
